--- a/verbo.html
+++ b/verbo.html
@@ -96,6 +96,42 @@
     </div>
   </div>
 
+    <!-- Botões fixos responsivos -->
+<div class="fixed bottom-4 right-4 z-40">
+  <!-- Container principal -->
+  <div class="flex flex-col space-y-2 md:flex-row md:space-y-0 md:space-x-2">
+    <!-- Botão de Verbos -->
+    <a href="revisao.html" class="bg-yellow-500 hover:bg-yellow-600 text-black font-bold py-3 px-4 rounded-full shadow-lg transition-all duration-300 flex items-center justify-center">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
+      </svg>
+      <span class="hidden sm:inline">Revisão</span>
+      <span class="sm:hidden">Rev</span>
+    </a>
+    
+    <!-- Botão de Expressões -->
+    <a href="expressoes.html" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-4 rounded-full shadow-lg transition-all duration-300 flex items-center justify-center">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z" />
+      </svg>
+      <span class="hidden sm:inline">Expressões</span>
+      <span class="sm:hidden">Expr</span>
+    </a>
+    
+    <!-- Botão de Pronúncia -->
+    <a href="quarta.html" class="bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 px-4 rounded-full shadow-lg transition-all duration-300 flex items-center justify-center">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+      </svg>
+      <span class="hidden sm:inline">Pronúncia</span>
+      <span class="sm:hidden">Pron</span>
+    </a>
+  </div>
+</div>
+    </div>
+
+
+
   <script src="verbo.js"></script>
 </body>
 </html>
