--- a/Cadastrar.html
+++ b/Cadastrar.html
@@ -2,65 +2,22 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Cadastro de Vídeo</title>
+  <title>Cadastro de Vídeo - Sugestão Instantânea</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 30px;
-      background: #f4f4f9;
-      color: #333;
-    }
-    h1 {
-      text-align: center;
-      margin-bottom: 20px;
-      color: #444;
-    }
-    form {
-      max-width: 600px;
-      margin: auto;
-      background: #fff;
-      padding: 25px;
-      border-radius: 12px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    }
-    label {
-      display: block;
-      margin-top: 15px;
-      font-weight: bold;
-    }
-    input[type="text"], textarea, select {
-      width: 100%;
-      padding: 8px 10px;
-      margin-top: 5px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      box-sizing: border-box;
-    }
-    textarea {
-      resize: vertical;
-    }
-    input[type="checkbox"] {
-      margin-right: 5px;
-    }
-    button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      border: none;
-      background: #4CAF50;
-      color: white;
-      border-radius: 6px;
-      cursor: pointer;
-      font-size: 16px;
-    }
-    button:hover {
-      background: #45a049;
-    }
-    #novoAutorBtn {
-      background: #2196F3;
-    }
-    #novoAutorBtn:hover {
-      background: #1976D2;
-    }
+    body { font-family: Arial,sans-serif; margin:30px; background:#f4f4f9; color:#333 }
+    h1 { text-align:center; margin-bottom:20px; color:#444 }
+    form { max-width:600px; margin:auto; background:#fff; padding:25px; border-radius:12px; box-shadow:0 2px 10px rgba(0,0,0,0.1) }
+    label { display:block; margin-top:15px; font-weight:bold }
+    input[type="text"], textarea, select { width:100%; padding:8px 10px; margin-top:5px; border-radius:6px; border:1px solid #ccc; box-sizing:border-box }
+    textarea { resize:vertical }
+    button { margin-top:20px; padding:10px 20px; border:none; background:#4CAF50; color:white; border-radius:6px; cursor:pointer; font-size:16px }
+    button:hover { background:#45a049 }
+    #novoAutorBtn { background:#2196F3 }
+    #novoAutorBtn:hover { background:#1976D2 }
+    .suggestions { border:1px solid #ccc; border-radius:6px; margin-top:2px; max-height:120px; overflow-y:auto; background:#fff; position:absolute; width:calc(100% - 20px); z-index:10 }
+    .suggestions div { padding:6px 10px; cursor:pointer }
+    .suggestions div:hover { background:#f0f0f0 }
+    .tag-wrapper { position:relative }
   </style>
 </head>
 <body>
@@ -75,19 +32,21 @@
     <label for="descricao">Descrição:</label>
     <textarea id="descricao" name="descricao" rows="3"></textarea>
 
-    <label for="tags">Tags (separadas por ponto, ex: Verbo.Have.SimplePresente):</label>
-    <input type="text" id="tags" name="tags">
+    <label for="tags">Tags (use "." para separar níveis, ex: Verbos.Have.SimplePresente):</label>
+    <div class="tag-wrapper">
+      <input type="text" id="tags" name="tags" autocomplete="off">
+      <div id="suggestions" class="suggestions" style="display:none;"></div>
+    </div>
 
     <label for="autor">Autor:</label>
     <select id="autor" name="autor"></select>
     <button type="button" id="novoAutorBtn">Cadastrar novo autor</button>
 
-    <label for="numeroVideo">Número do vídeo (código alfanumérico):</label>
+    <label for="numeroVideo">Número do vídeo:</label>
     <input type="text" id="numeroVideo" name="numeroVideo">
 
     <label>
-      <input type="checkbox" id="especial" name="especial">
-      Vídeo Especial (do dia)
+      <input type="checkbox" id="especial" name="especial"> Vídeo Especial (do dia)
     </label>
 
     <button type="submit">Cadastrar Vídeo</button>
@@ -99,100 +58,131 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
 
   <script>
-    // 🔹 Configuração Firebase
-    const firebaseConfig = {
-      apiKey: "AIzaSyA9r7AfToG9msI_guh8xY_PJBJXfrF_IPc",
-      authDomain: "instagraneducativo.firebaseapp.com",
-      projectId: "instagraneducativo",
-    };
+  // 🔹 Configuração Firebase
+  const firebaseConfig = {
+    apiKey: "AIzaSyA9r7AfToG9msI_guh8xY_PJBJXfrF_IPc",
+    authDomain: "instagraneducativo.firebaseapp.com",
+    projectId: "instagraneducativo",
+  };
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+  const auth = firebase.auth();
 
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-    const auth = firebase.auth();
+  const form = document.getElementById("formVideo");
+  const tagsInput = document.getElementById("tags");
+  const autorSelect = document.getElementById("autor");
+  const novoAutorBtn = document.getElementById("novoAutorBtn");
+  const suggestionsDiv = document.getElementById("suggestions");
 
-    const form = document.getElementById("formVideo");
-    const tagsInput = document.getElementById("tags");
-    const autorSelect = document.getElementById("autor");
-    const novoAutorBtn = document.getElementById("novoAutorBtn");
+  // 🔹 Conjunto de tags em memória
+  const tagsSet = new Set();
 
-    // 🔹 Autenticação anônima
-    async function ensureAuth() {
-      if (!auth.currentUser) {
-        await auth.signInAnonymously();
-        console.log("Autenticação anônima concluída.");
-      }
-    }
+  async function ensureAuth() {
+    if (!auth.currentUser) await auth.signInAnonymously();
+  }
 
-    // 🔹 Carregar autores no select
-    async function carregarAutores() {
-      await ensureAuth();
-      autorSelect.innerHTML = "";
-      const snapshot = await db.collection("autores").get();
-      snapshot.forEach(doc => {
-        const option = document.createElement("option");
-        option.value = doc.id;
-        option.textContent = doc.data().nome;
-        autorSelect.appendChild(option);
+  // 🔹 Carregar autores
+  async function carregarAutores() {
+    await ensureAuth();
+    autorSelect.innerHTML = "";
+    const snapshot = await db.collection("autores").get();
+    snapshot.forEach(doc => {
+      const opt = document.createElement("option");
+      opt.value = doc.id;
+      opt.textContent = doc.data().nome;
+      autorSelect.appendChild(opt);
+    });
+  }
+
+  novoAutorBtn.addEventListener("click", async () => {
+    const nome = prompt("Digite o nome do novo autor:");
+    if (!nome) return;
+    const docRef = await db.collection("autores").add({ nome });
+    await carregarAutores();
+    autorSelect.value = docRef.id;
+  });
+
+  // 🔹 Carregar todas as tags para memória
+  async function carregarTags() {
+    await ensureAuth();
+    const snapshot = await db.collection("tags").get();
+    snapshot.forEach(doc => {
+      const t = doc.data().nome.trim();
+      if (t) tagsSet.add(t);
+    });
+    console.log("✅ Tags carregadas em memória:", Array.from(tagsSet));
+  }
+
+  // 🔹 Mostrar sugestões instantâneas
+  function mostrarSugestoes() {
+    const value = tagsInput.value;
+    const parts = value.split(".");
+    const current = parts[parts.length - 1].trim().toLowerCase();
+
+    if (!current) { suggestionsDiv.style.display = "none"; return; }
+
+    const sugestoes = Array.from(tagsSet).filter(t => t.toLowerCase().startsWith(current));
+    if (sugestoes.length === 0) { suggestionsDiv.style.display="none"; return; }
+
+    suggestionsDiv.innerHTML = "";
+    sugestoes.forEach(tag => {
+      const div = document.createElement("div");
+      div.textContent = tag;
+      div.onclick = () => {
+        parts[parts.length - 1] = tag;
+        tagsInput.value = parts.join(".") + ".";
+        tagsInput.focus();
+        suggestionsDiv.style.display = "none";
+      };
+      suggestionsDiv.appendChild(div);
+    });
+    suggestionsDiv.style.display = "block";
+  }
+
+  tagsInput.addEventListener("input", mostrarSugestoes);
+  tagsInput.addEventListener("blur", () => { setTimeout(()=>{ suggestionsDiv.style.display="none"; }, 150); });
+
+  // 🔹 Salvar vídeo
+  form.addEventListener("submit", async (e) => {
+    e.preventDefault();
+    await ensureAuth();
+
+    const titulo = form.titulo.value;
+    const videoId = form.videoId.value;
+    const descricao = form.descricao.value;
+    const tags = form.tags.value.split(".").map(t=>t.trim()).filter(t=>t!=="");
+    const autor = form.autor.value;
+    const numeroVideo = form.numeroVideo.value;
+    const especial = form.especial.checked;
+
+    try {
+      // Salvar vídeo
+      await db.collection("videos").add({
+        titulo, videoId, descricao, tags, autor, numeroVideo, especial,
+        data: firebase.firestore.FieldValue.serverTimestamp()
       });
-    }
 
-    // 🔹 Adicionar novo autor
-    novoAutorBtn.addEventListener("click", async () => {
-      const nome = prompt("Digite o nome do novo autor:");
-      if (nome) {
-        const docRef = await db.collection("autores").add({ nome });
-        await carregarAutores();
-        autorSelect.value = docRef.id;
-      }
-    });
-
-    // 🔹 Salvar vídeo
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-
-      await ensureAuth();
-
-      const titulo = form.titulo.value;
-      const videoId = form.videoId.value;
-      const descricao = form.descricao.value;
-      const tags = form.tags.value.split(".").map(t => t.trim()).filter(t => t !== "");
-      const autor = form.autor.value;
-      const numeroVideo = form.numeroVideo.value;
-      const especial = form.especial.checked;
-
-      try {
-        // Salvar vídeo
-        await db.collection("videos").add({
-          titulo,
-          videoId,
-          descricao,
-          tags,
-          autor,
-          numeroVideo,
-          especial,
-          data: firebase.firestore.FieldValue.serverTimestamp()
-        });
-
-        // Garantir que as tags existam na coleção de tags
-        for (let t of tags) {
-          const query = await db.collection("tags").where("nome", "==", t).get();
-          if (query.empty) {
-            await db.collection("tags").add({ nome: t });
-          }
+      // Atualizar tags em memória e Firestore
+      for (let t of tags) {
+        if (!tagsSet.has(t)) {
+          tagsSet.add(t);
+          await db.collection("tags").add({ nome: t });
         }
-
-        alert("Vídeo cadastrado com sucesso!");
-        form.reset();
-      } catch (err) {
-        console.error("Erro ao cadastrar vídeo:", err);
-        alert("Erro ao cadastrar vídeo. Veja o console.");
       }
-    });
 
-    // 🔹 Inicializar
-    (async function init() {
-      await carregarAutores();
-    })();
+      alert("Vídeo cadastrado com sucesso!");
+      form.reset();
+    } catch(err) {
+      console.error("Erro ao cadastrar vídeo:", err);
+      alert("Erro ao cadastrar vídeo. Veja o console.");
+    }
+  });
+
+  // 🔹 Inicialização
+  (async function init() {
+    await carregarAutores();
+    await carregarTags();
+  })();
   </script>
 </body>
 </html>
